# tatami

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json
.claude/: settings.json
.claude/skills/: effect.md
.claude/skills/gpui/: SKILL.md  advanced.md  elements.md  styling.md
.claude/skills/publishing/: SKILL.md
.fp/: .gitignore  activity.jsonl  config.toml  workspace.toml
.fp/comments/: 6525a80e-f5b6-47b3-9ea1-d0d7d7f32e18.md
.fp/issues/: TAT-1.md  TAT-10.md  TAT-11.md  TAT-12.md  TAT-13.md  TAT-14.md  TAT-15.md  TAT-16.md  TAT-17.md  TAT-18.md  TAT-2.md  TAT-3.md  TAT-4.md  TAT-5.md  TAT-6.md  TAT-7.md  TAT-8.md  TAT-9.md
.github/workflows/: release.yml
apps/desktop/: README.md  biome.jsonc  components.json  index.html  no-react-memoization.grit  no-useeffect-data-fetching.grit  no-usestate.grit  package.json  sgconfig.yml  tsconfig.json  vite.config.ts
apps/desktop/rules/: no-direct-tauri-mutations.yml  no-react-memoization.yml  no-useeffect-data-fetching.yml  no-usestate.yml
apps/desktop/src/: App.tsx  atoms.ts  db.ts  main.tsx  routeTree.gen.ts  schemas.ts  tauri-commands.ts  tauri-stub.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  storage.rs  watcher.rs
apps/desktop/src-tauri/src/repo/: diff.rs  jj.rs  log.rs  mod.rs  status.rs
apps/desktop/src/components/: AceJump.tsx  AppShell.tsx  AppSidebar.tsx  ChangedFilesList.tsx  CommandPalette.tsx  DetailPanel.tsx  DiffPanel.tsx  KeyboardShortcutsHelp.tsx  LogView.tsx  ProjectPicker.tsx  RevisionGraph.tsx  Sidebar.tsx  StackIndicator.tsx  StatusBar.tsx  Toolbar.tsx  component-example.tsx  revision-graph-utils.ts
apps/desktop/src/components/diff/: DiffToolbar.tsx  FileDiffSection.tsx  RevisionHeader.tsx  index.ts
apps/desktop/src/components/revision-graph/: DebugOverlay.tsx  EdgeLayer.tsx  GraphEdge.tsx  GraphNode.tsx  RevisionRow.tsx  constants.ts  index.tsx  types.ts
apps/desktop/src/hooks/: use-mobile.ts  useAddRepository.ts  useAppTitle.ts  useDiffPanelKeyboard.ts  useKeyboard.ts  useRevisionGraphNavigation.ts  useTauriLiveStoreSync.ts  useTheme.ts
apps/desktop/src/livestore/: tauri-adapter.ts
apps/desktop/src/mocks/: setup.ts  tauri-core.ts  tauri-deep-link.ts  tauri-dialog.ts  tauri-event.ts  tauri-path.ts
apps/desktop/src/routes/: index.tsx  project.$projectId.tsx  repositories.tsx  settings.tsx
apps/desktop/src/styles/: App.css  index.css
apps/old-gui/src/: main.rs
apps/old-gui/src/repo/: diff.rs  status.rs
apps/old-gui/src/ui/: mod.rs  status_view.rs
src/: app.rs  main.rs  repo.rs  watcher.rs
src/repo/: jj.rs  log.rs
src/ui/: diff_view.rs  log_view.rs  mod.rs  status_view.rs  syntax.rs  theme.rs
(+21 files in other folders)
