[package]
name = "tatami"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[package.metadata.bundle]
name = "Tatami"
identifier = "com.laulauland.tatami"
icon = ["resources/AppIcon.png"]
osx_minimum_system_version = "10.15.7"

[dependencies]
anyhow = "1.0.100"
config = "0.15.19"
futures = "0.3.31"
gpui = "0.2.2"
hex = "0.4.3"
hostname = "0.4.2"
jj-lib = "0.35.0"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
pollster = "0.4.0"
similar = "2.7.0"
tokio = { version = "1.48.0", features = ["io-util"] }
toml_edit = "0.23.9"
tree-sitter = "0.26.3"
tree-sitter-highlight = "0.26.3"
tree-sitter-json = "0.24.8"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
