[package]
name = "tatami-desktop"
version = "0.1.0"
description = "Tatami - A Jujutsu GUI client"
authors = ["you"]
edition = "2024"

[lib]
name = "tatami_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.100"
futures = "0.3.31"
hex = "0.4.3"
jj-lib = "0.35.0"
pollster = "0.4.0"
similar = "2.7.0"
tokio = { version = "1.48.0", features = ["io-util"] }
toml_edit = "0.23.9"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-store = "2.4.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
whoami = "1.6.1"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"
